[package]
name = "memlock"
version = "0.1.0"
edition = "2021"

[dependencies]

# Easier error handling
anyhow = "1.0.97"
# HTTP form + TLS
reqwest = { version = "0.12", features = ["blocking", "socks"] }

# SSH support
ssh2 = "0.9.5"

# Telnet protocol support
telnet = "0.2.3"

# Async runtime for networking and multithreading
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "process", "fs", "io-util"] }

futures = "0.3.31"

rand = { version = "0.9.0", features = ["std"] }

suppaftp = { version = "6.2.0", features = ["async-native-tls"] }
async-std = { version = "1.13.1", features = ["attributes"] }
once_cell = "1.21.3"
socks = "0.3.4"
tokio-socks = "0.5.2"
