[package]
name = "dftp"
version = "0.1.0"
edition = "2021"



[dependencies]
# For HTTP requests
reqwest = { version = "0.12.15", features = ["json", "socks"] }

#proxy manager
rand = "0.9.0"

# For CLI parsing
clap = { version = "4.5.35", features = ["derive"] }

# Async runtime for networking
tokio = { version = "1.44.2", features = ["fs", "io-util", "rt-multi-thread", "macros", "time", "process"] }

# Easier error handling
anyhow = "1.0.97"

#teminal color
colored = "3.0.0"
rustyline = "15.0.0"
#ftp brute force module
async_ftp = "6.0.0"
rustls = "0.23.26"
webpki-roots = "0.26.8"
suppaftp   = { version = "6.2.0", features = ["async", "async-native-tls","native-tls"] }
sysinfo = { version = "0.34.2", features = ["multithread"]}



futures = "0.3.31"
#spotube exploit
serde_json = "1.0.140"
futures-util = "0.3.31"
tokio-tungstenite = "0.26.2"
ftp = "3.0.1"
[[bin]]
name = "dftp"
path = "src/main.rs"
